<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.ChoosedActivity">

    <TextView
        android:layout_marginTop="-30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotrovn"
        android:textColor="@color/ColorDefault"
        android:textSize="@dimen/_40sdp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:text="@string/faith"
        android:textColor="@color/Orange"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:text="@string/You_Care"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:textStyle="" />

    <Button
        android:id="@+id/btnNeedRelief"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/shape_button"
        android:text="@string/need_relief"
        android:textColor="#fff"
        android:textSize="@dimen/_20sdp" />

    <Button
        android:layout_marginBottom="@dimen/_40sdp"
        android:id="@+id/btnHelper"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:text="@string/helper"
        android:textColor="#fff"
        android:textSize="@dimen/_20sdp" />
</LinearLayout>