<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.needrelief.CreateBulletinOfReliefActivity">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_CreateBulletin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/back"
            app:title="Tạo bản tin cứu trợ" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/background_linear"
            android:orientation="vertical"
            android:padding="@dimen/_4sdp">

            <Spinner
                android:id="@+id/spnSelectProvince"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/spinnner_selected_location" />

            <Spinner
                android:id="@+id/spnSelectCity"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/spinnner_selected_location" />

            <Spinner
                android:id="@+id/spnSelectTown"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/spinnner_selected_location" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:background="@drawable/background_linear"
                android:paddingStart="@dimen/_16sdp"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/your_location"
                android:textSize="@dimen/_15sdp"
                app:drawableRightCompat="@drawable/ic_location"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/background_linear"
            android:orientation="vertical"
            android:padding="@dimen/_4sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/people_call"
                android:textColor="#000" />

            <EditText
                android:gravity="top"
                android:id="@+id/edtPeople_Call"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:autofillHints=""
                android:background="@drawable/background_linear"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Role"
                android:textColor="#000" />

            <EditText
                android:gravity="top"
                android:id="@+id/edtRole"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:autofillHints=""
                android:background="@drawable/background_linear"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Number_Phone"
                android:textColor="#000" />

            <EditText
                android:gravity="top"
                android:id="@+id/edtNumberPhone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:autofillHints=""
                android:background="@drawable/background_linear"
                android:inputType="number"
                tools:ignore="LabelFor,TextFields" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/background_linear"
            android:orientation="vertical"
            android:padding="@dimen/_4sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/describe_the_situation"
                android:textColor="#000" />

            <EditText
                android:gravity="top"
                android:id="@+id/edtDescribe_Situation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:autofillHints=""
                android:background="@drawable/background_linear"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Need_support"
                android:textColor="#000" />

            <EditText
                android:gravity="top"
                android:id="@+id/edtNeed_support"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:autofillHints=""
                android:background="@drawable/background_linear"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/btnAdd_Image_Situation"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/background_button_addimage"
                android:drawableStart="@drawable/ic_libraly"
                android:drawableLeft="@drawable/ic_libraly"
                android:paddingLeft="@dimen/_6sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:paddingRight="@dimen/_16sdp"
                android:text="@string/add_image_situation"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:background="@drawable/shape_button"
            android:text="@string/Save"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>