<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    android:orientation="vertical"
    tools:context=".activity.helper.StrongmanBulletinActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar_Needed_Relief"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bang_tin_cuu_tro"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="italic" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imgNotifi"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_130sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_bell_circle"
            app:riv_corner_radius="@dimen/_15sdp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcBulletin_NeedRelief"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Toolbar_Needed_Relief"
        tools:listitem="" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSearch"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_search_magnifier_interface_symbol"
        app:backgroundTint="@color/white"
        app:borderWidth="2dp"
       app:fabCustomSize="@dimen/_40sdp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/background_linear2"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/background_linear2"
            android:gravity="center"
            android:onClick="ShowMap"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_6sdp"
                android:src="@drawable/ic_location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/map"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/background_linear2"
            android:gravity="center"
            android:onClick="ShowInfor"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_6sdp"
                android:src="@drawable/ic_to_do_list" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/information"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>